# archvital

./: .SRCINFO  .gitignore  CMakeLists.txt  PKGBUILD  PKGBUILD-stable  README.md  archvital.desktop  bump-version.sh  install.sh
.github/workflows/: aur-update.yml  release.yml  tagged-release.yml
src/: main.cpp  mainwindow.cpp  mainwindow.h
src/core/: datastructs.h  systemmonitor.cpp  systemmonitor.h
src/sections/: cpusection.cpp  cpusection.h  diagnosticssection.cpp  diagnosticssection.h  disksection.cpp  disksection.h  gpusection.cpp  gpusection.h  memorysection.cpp  memorysection.h  networksection.cpp  networksection.h  overviewsection.cpp  overviewsection.h  settingssection.cpp  settingssection.h  tasksection.cpp  tasksection.h
src/ui/: barwidget.h  metriccard.cpp  metriccard.h  sidebar.cpp  sidebar.h  sparkline.cpp  sparkline.h  stylesheet.h  toastmanager.cpp  toastmanager.h  toastwidget.cpp  toastwidget.h
